2010-12-16  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        execCommand('styleWithCSS') is ignored when selection isn't inside a contenteditable area
        https://bugs.webkit.org/show_bug.cgi?id=51164

        Fixed the bug by always enabling the StyleWithCSS command.

        Test: editing/style/stylewithcss-without-selection.html

        * editing/EditorCommand.cpp:
        (WebCore::createCommandMap): StyleWithCSS is enabled rather than enabledInRichlyEditableText.
2010-12-16  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Darin Adler.

        execCommand('styleWithCSS') is ignored when selection isn't inside a contenteditable area
        https://bugs.webkit.org/show_bug.cgi?id=51164

        Added a test to ensure WebKit accepts StyleWithCSS command even if the current selection
        isn't inside a contenteditable region.

        * editing/style/stylewithcss-without-selection-expected.txt: Added.
        * editing/style/stylewithcss-without-selection.html: Added.


Canonical link: https://commits.webkit.org/64551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74204 268f45cc-cd09-0410-ab3c-d52691b4dbfc